Author View All Link: Fix Spacing

--- a/widgets/author-box/styles/default.less
+++ b/widgets/author-box/styles/default.less
@@ -127,7 +127,7 @@
 			text-decoration: none;
 
 			& when not ( @all_spacing = default ) {
-				margin: @all_spacing;
+				margin: @all_spacing 0;
 			}
 
 			&:focus,
